--- a/base.html
+++ b/base.html
@@ -1,7 +1,9 @@
 <html>
   <svg xmlns="http://www.w3.org/2000/svg" height="500" width="500" id="box" style="border: 1px solid black;"> </svg>
-  <button id="germany"> Germany </button>
   <br>
+  <button id="germany"> Germany </button>
   <button id="china"> China </button>
+
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="script.js"> </script>
 </html>
